package com.directi.training.isp.exercise_refactored.classes;

public interface ISensingDoor extends Door
{

    void proximityCallback();
}
