package com.directi.training.isp.exercise_refactored.classes;

public interface ITimedDoor extends Door
{
    void timeOutCallback();
}
